# special-robot

./: Dockerfile  README.md  pyproject.toml
app/: virtual_assistant.py
